# turnkey-engine

./: .env.example  .gitignore  README.md  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_report_pipeline_fields.py  003_add_payments.py  8dd45dd3f476_initial_tables.py
app/: agent.py  auth.py  config.py  database.py  main.py  models.py  worker.py
app/pipeline/: __init__.py  constants.py  fetch_engine.py  orchestrator.py  report_pipeline.py  types.py
app/pipeline/contracts/: non_socrata.py  socrata.py
app/pipeline/fetchers/: acris.py  dob_bis.py  external.py  firecrawl.py  pluto.py  sales.py  socrata.py
app/pipeline/render/: ai_narratives.py  helpers.py  html_to_pdf.py  report_renderer.py
app/pipeline/transform/: acris.py  comps.py  raw.py
app/routes/: checkout.py  health.py  reports.py  webhooks.py
app/templates/: report.html
docs/: architecture.md
tests/: conftest.py  test_integration.py
